Corrigido problemas no enum e na geracao do metodo de update